# sub_alberto

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/uuv_control/lib/uuv_control/: dynamic_model  pid
install/uuv_control/share/uuv_control/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/uuv_master/share/uuv_master/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/uuv_mission/share/uuv_mission/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/uuv_navigation/lib/uuv_navigation/: bezier_trayectory  line_trayectory  los
install/uuv_navigation/share/uuv_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/uuv_vision/share/uuv_vision/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/uuv_visualization/share/uuv_visualization/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  (+4 more)
log/: latest_build
src/uuv_control/: CMakeLists.txt  package.xml
src/uuv_control/libs/controller_asmc/: 6dof_asmc.cpp  6dof_asmc.hpp
src/uuv_control/libs/controlloe_pid_f/: lib_pid_f.cpp
src/uuv_control/scripts/: pid.py
src/uuv_control/src/: asmc.cpp  dynamic_model_uuv.cpp  pid_f.cpp
src/uuv_master/: CMakeLists.txt
src/uuv_mission/: CMakeLists.txt  package.xml
src/uuv_mission/missions/: mission_1.yaml  mission_2.yaml
src/uuv_mission/scripts/: mission_handler.py
src/uuv_msgs/: CMakeLists.txt  package.xml
src/uuv_msgs/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/uuv_msgs/log/: latest_build
src/uuv_msgs/msg/: trajectory_point.msg  trayectory.msg
src/uuv_navigation/: CMakeLists.txt
src/uuv_navigation/launch/: launch.py
src/uuv_navigation/scripts/: bezier.py  line_trayectory.py  los.py
src/uuv_vision/: CMakeLists.txt  package.xml
src/uuv_visualization/: CMakeLists.txt
src/uuv_visualization/launch/: launch.py
src/uuv_visualization/rviz/: visualization_1.rviz
src/uuv_visualization/scripts/: object_visualizer.py  trayectory_visualizer.py  uuv_tracker.py
src/uuv_visualization/urdf/: sub.urdf
(+22 files in other folders)
